--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "redux": "^4.1.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
